--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,9 @@
         "browser": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 6 
     },
     "rules": {
         "indent": [
@@ -14,7 +14,7 @@
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "windows"
         ],
         "quotes": [
             "error",
